using UnityEngine;
using System.Collections;

public class StartMenuAnimatorString : BaseMenuStateMachineBehaviour{

    //取得選單編號
    public static string isNewData = "isNewData";
    public static string isNewDataSelect = "isNewDataSelect";
    
    public static string isLoadData = "isLoadData";
    public static string isLoadDataSelect = "isLoadDataSelect";

    public static string isSetting = "isSetting";

    public static string isExit = "isExit";

    public static string isOK = "isOK";
}
